solved size/scroll issue on mobile

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   padding: 0;
 }
 
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   overflow: hidden;
@@ -37,6 +37,7 @@ body{
   position: relative;
   height: 100vh;
   text-align: center;
+  overflow: hidden;
 }
 
 h1 {
